Tue Jul 24 14:21:53 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (expandVariables, outputVariable),
	htdoc/hts_templates.html: Add support for $=(var) template variable
	references, as suggested by Quim Sanmarti.

Tue Jul 24 14:12:06 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (readFile): Added missing fclose() call, and
	debugging message for when file can't be opened.

	* htsearch/Display.cc (displayParsedFile): Added debugging message
	for when file can't be opened.

Tue Jul 24 14:03:12 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (setVariables), htcommon/defaults.cc: Added
	maximum_page_buttons attribute, to limit buttons to less than
	maximum_pages.  Fixes PR#731 & PR#781.
	* htdoc/attrs.html, cf_by{name,prog}.html: Documented it.

Tue Jul 24 13:42:56 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/hts_templates.html, htsearch/Display.cc (displayMatch):
	Add METADESCRIPTION variable.

Tue Jul 24 13:20:24 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentDB.{h,cc}: Added FindCoded() method to lookup
	docdb record with URL that's still encoded.

	* htsearch/Display.cc (display, displayMatch, buildMatchList):
	Use new method to avoid problems with URLs that are decoded and
	reencoded with another, more ambiguous url_part_aliases setting.
	Also fixed a problem with date range checking looking at ref before
	checking if it's null.

Thu Jul 12 11:45:05 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/conv_doc.pl, contrib/parse_doc.pl: Fixed EOF handling in
	dehyphenation, fixed to handle %xx codes in title made from URL.

	* contrib/doc2html/doc2html.pl, contrib/doc2html/pdf2html.pl,
	contrib/doc2html/swf2html.pl: Fixed to handle %xx codes in URL title.

Thu Jul  5 11:23:40 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* db/dist/config.guess: Update with more recent GNU version that